<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="loggingTitleText">Sign in:</string>
    <string name="loggingLoginText">User:</string>
    <string name="loggingPasswordText">Password:</string>
    <string name="loggingButtonText">GO!</string>
    <string name="loggingRegistrationText">or if you\'re new here </string>
    <string name="loggingRegistrationButtonText">Register</string>
    <string name="loggingInvalidErrorDefaultText">Error</string>
    <string name="title_activity_menu">LoggingActivity</string>
    <string name="networkDefaultTextView">OFFLINE</string>
    <string name="signInButtonText">Sign In</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>
    
    <color name="networkStatusRed">#C90000</color>
    <color name="networkStatusGreen">#C3EB54</color>
    
    <string-array name="menuList">
        <item>Option1</item>
        <item>Option2</item>
        <item>Option3</item>
        <item>Option4</item>
        <item>Option5</item>
        <item>Option6</item>
    </string-array>

</resources>
